tests/snapshots/yaml_suite_snapshots__yaml_suite_9KBC_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Mapping starting at --- line
  from: "https://gist.github.com/anonymous/c728390e92ec93fb371ac77f21435cca via @ingydotnet"
  tags: error header mapping
  fail: true
  yaml: "--- key1: value1\n    key2: value2\n"
  tree: "+STR\n +DOC ---\n"
