tests/snapshots/yaml_suite_snapshots__yaml_suite_9KBC_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "https://gist.github.com/anonymous/c728390e92ec93fb371ac77f21435cca via @ingydotnet"
  name: Mapping starting at --- line
  tags: error header mapping
  tree: "+STR\n +DOC ---\n"
  yaml: "--- key1: value1\n    key2: value2\n"
