tests/snapshots/yaml_suite_snapshots__yaml_suite_9MAG_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Flow sequence with invalid comma at the beginning
  tags: error flow sequence
  tree: "+STR\n +DOC ---\n  +SEQ []\n"
  yaml: "---\n[ , a, b, c ]\n"
