tests/snapshots/yaml_suite_snapshots__yaml_suite_9MMA_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Directive by itself with no document
  from: "@ingydotnet"
  tags: error directive
  fail: true
  yaml: "%YAML 1.2\n"
  tree: "+STR\n"
