tests/snapshots/yaml_suite_snapshots__yaml_suite_9MMA_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@ingydotnet"
  name: Directive by itself with no document
  tags: error directive
  tree: "+STR\n"
  yaml: "%YAML 1.2\n"
